<resources>
    <string name="app_name">MeChoice</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="drawMenu_title_cookingSession">Cooking Session</string>
    <string name="drawMenu_title_favorite_guest">Favorite Guests</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="guest_hint_enterName">Enter your name!</string>
    <string name="guest_ingredients_like">Ingredients your like</string>
    <string name="guest_ingredients_dislike">Ingredients you dislike</string>
    <string name="guest_allergies">Allergies</string>
    <string name="guest_cuisine">Cuisine</string>
    <string name="guest_checkBox_favoriteGuest">Save as Favorite Guest</string>
    <string name="drawMenu_title_guest">Guest</string>
    <string name="guest_list_title">Favorite Guests</string>
    <string name="action_add">Add Guest</string>
    <string name="welcome_text">Welcome to MeChoice! MeChoice is the perfect tool to help you and your friends and family to easily figure out what to cook while taking into account everyone wishes.</string>
    <string name="splash_button_new_cooking_session">New Cooking Session</string>
    <string name="splash_button_new_favorite_guestlist">Favorite Guest</string>
    <string name="splash_button_hint_new_guest">Tab here if you want to save a guest on your device for later use.</string>
    <string name="cooking_session_newname_edittext">name your Cooking Session</string>
    <string name="cooking_session_newguest_button">Add new Guest to Cooking Session</string>
    <string name="cooking_session_viewguest_list_button">Guestlist</string>
    <string name="cooking_session_recipelist_button">Recipelist</string>
    <string name="guest_list_like_checkbox">Like</string>
    <string name="guest_list_dislike_checkbox">Dislike</string>
    <string name="ingr_list_dislike_checkbox">Dislike</string>
    <string name="ingr_list_like_checkbox">like</string>
    <string name="recipes_ingredients">Ingredients</string>


    <string-array name="nav_drawer_items">
        <item>First</item>
        <item>Second</item>
        <item>Third</item>
        <item>Fourth</item>
        <item>Fifth</item>
        <item>Sixth</item>
    </string-array>
    <array name="nav_drawer_icons">
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
    </array>



</resources>
